# driftdetect_coco

./: .gitignore  cocosep.py  drifttest.py  prometheus.py  promrule-prometheus-example-rules.yaml  threading_test.py
experiment/: coco.py  cocodrift.py  datatest.py  experiment.py  requirements.txt  showimg.py
experiment/experiments/Arten_Drifts/: pval.csv
experiment/experiments/Dimred_GaussianBlur/: mmd.csv
experiment/experiments/Dimred_GaussianBlur34/: mmd.csv
experiment/tensors/: tensors.md
experiments/: experiments.md
experiments/Arten_Drifts/: mmd.csv
experiments/Dimred_Default/: mmd.csv  pval.csv
experiments/Dimred_GaussianBlur/: pval.csv
experiments/Dimred_GaussianBlur34/: pval.csv
experiments/Dimred_Jitter/: mmd.csv
experiments/Dimred_Jitter34/: mmd.csv
experiments/Windowsize_Resnetpca_GaussianBlur/: mmd.csv  pval.csv
experiments/Windowsize_resnetpca_gaussianBlur34/: mmd.csv
experiments/Windowsize_resnetpca_gaussianblur2/: mmd.csv  pval.csv
experiments/Windowsize_resnetpca_jitter/: mmd.csv
experiments/dimred_w_windowsize_100/: pval.csv
experiments/dimred_w_windowsize_200/: mmd.csv  pval.csv
experiments/pca_dimred_size/: pval.csv
experiments/pca_dimred_size_default/: mmd.csv
experiments/pca_dimred_size_jitter/: pval.csv
prototype/: README.md  alertm.yaml  alertmanager.yaml  deploy_yolo.yaml  discordconfig.yaml  input.json  isvc.yaml  josef_monitor.yaml  monitor-isvc.yaml  operator.yaml  podmonitor.yaml  rule.yaml  sample_test_monitor.yaml  values.yaml
prototype/monitoring/: Procfile  monitoring.py  pyproject.toml
(+14 files in other folders)
