[tool.poetry]
name = "image-monitoring"
version = "v1"
description = "Custom Model to monitor Image Specific Data Drift"
authors = ["Samuel Silitonga"]
license = "https://github.com/kserve/kserve/blob/master/LICENSE"
packages = [
    { include = "*.py" }
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
kserve = "^0.14.1"
torchdrift = "0.1.0.post1"
torch = "2.6.0"
torchvision = "0.21.0"
tqdm = "4.67.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = { version = "~24.3.0", extras = ["colorama"] }

[tool.poetry-version-plugin]
source = "file"
file_path = "../VERSION"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
